--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     <div class="flip-card">
                       <div class="flip-card-inner">
                         <div class="flip-card-front">
-                          <img src="img.jpg" alt="Avatar" style="width:180px;height:130px;">
+                          <img src="IMG.jpg" alt="image-not-found" style="width:180px;height:130px;">
                         </div>
                         <div class="flip-card-back">
                           <h1>Manager:</h1> 
